<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context=".BuildProfile">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:titleEnabled="false"
            >

            <ImageView
                android:id="@+id/main.backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/header"
                app:layout_collapseMode="parallax"
                />


            <TextView
                android:id="@+id/tvuname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:paddingLeft="50dp"
                android:paddingBottom="50dp"

                />

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User@gmail.com"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:paddingLeft="50dp"
                android:paddingBottom="30dp"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            >
<LinearLayout
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <EditText
            android:padding="12dp"
            android:id="@+id/username"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true"
            android:focusable="true"
            android:drawableLeft="@drawable/profile"
            android:drawablePadding="8dp"
            />

    <EditText
        android:padding="12dp"
        android:id="@+id/email"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:singleLine="true"
        android:focusable="true"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        />

    <EditText
        android:padding="12dp"
        android:id="@+id/contact"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:singleLine="true"
        android:focusable="true"
        android:drawableLeft="@drawable/contact"
        android:drawablePadding="8dp"
        android:hint="Contact No."
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back"
        android:padding="8dp"
        android:layout_margin="8dp">
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/accent"
        android:padding="10dp"
        android:textSize="20dp"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selectgender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        >
        <RadioButton android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textStyle="bold"
            android:textColor="@color/md_grey_600"
            android:paddingRight="30dp"
            />
        <RadioButton android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textStyle="bold"
            android:textColor="@color/md_grey_600"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/addinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addinfo"
        android:textColor="@color/accent"
        android:padding="10dp"
        android:textSize="20dp"
        />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    <EditText
        android:padding="12dp"
        android:id="@+id/city"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:singleLine="true"
        android:focusable="true"
        android:hint="@string/city"
        android:drawablePadding="8dp"
        />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add">
    <EditText
        android:padding="12dp"
        android:id="@+id/state"
        android:layout_toRightOf="@+id/city"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:singleLine="true"
        android:focusable="true"
        android:hint="@string/state"
        android:drawablePadding="8dp"
        />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    <EditText
        android:padding="12dp"
        android:id="@+id/country"
        android:layout_below="@+id/state"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:singleLine="true"
        android:focusable="true"
        android:hint="@string/country"
        android:drawablePadding="8dp"
        />
</android.support.design.widget.TextInputLayout>
        </LinearLayout>
</LinearLayout>
    </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/done"
        android:translationZ="20dp"
        />

</android.support.design.widget.CoordinatorLayout>
